test_suite/tests/ui/remote/missing_field.stderr
error[E0063]: missing field `b` in initializer of `remote::S`
  --> $DIR/missing_field.rs:11:18
   |
11 | #[serde(remote = "remote::S")]
   |                  ^^^^^^^^^^^ missing `b`

For more information about this error, try `rustc --explain E0063`.
